# x-dag-engine

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/engine/: Cargo.toml  README.md
crates/engine/src/: code_executor.rs  conditional.rs  event_bus.rs  lib.rs  loop_executor.rs  rest_connector.rs  retry.rs  scheduler.rs  service_executor.rs  subworkflow_executor.rs  testing.rs  try_catch_executor.rs  variable_store.rs  webhook.rs
crates/engine/tests/: integration_test.rs
crates/model/: Cargo.toml  README.md
crates/model/src/: builder.rs  edge.rs  json_schema.rs  lib.rs  linter.rs  node.rs  schedule.rs  template.rs  test_utils.rs  validation.rs  visualization.rs  workflow.rs
crates/oxify-engine/: Cargo.toml  README.md
crates/oxify-engine/src/: code_executor.rs  conditional.rs  event_bus.rs  lib.rs  loop_executor.rs  rest_connector.rs  retry.rs  scheduler.rs  subworkflow_executor.rs  testing.rs  try_catch_executor.rs  webhook.rs
crates/oxify-engine/tests/: integration_test.rs
crates/oxify-model/: Cargo.toml  README.md
crates/oxify-model/src/: builder.rs  execution.rs  json_schema.rs  node.rs  test_utils.rs  validation.rs  visualization.rs  yaml.rs
crates/oxify-server/: ARCHITECTURE.md  Cargo.toml  README.md
crates/oxify-server/src/: rate_limit.rs  server.rs  shutdown.rs  sse.rs  tls.rs  tracing_config.rs  types.rs
crates/oxify-server/tests/load/: basic-load-test.js  soak-test.js
crates/oxify-server/tests/security/: auth-test.js  headers-test.js  run-all-security-tests.sh  sql-injection-test.js
crates/oxify-storage/: Cargo.toml
crates/oxify-storage/migrations/: 20251130000001_init.sql  20251130000003_workflow_versions.sql
crates/oxify-storage/sql/: 001_performance_indexes_down.sql  002_schema_constraints.sql  002_schema_constraints_down.sql
crates/oxify-storage/src/: db_utils.rs  error.rs  execution_store.rs  lib.rs  migration_runner.rs  migrations.rs  pagination.rs  query_builder.rs  retry.rs  validation.rs  workflow_store.rs
crates/server/: ARCHITECTURE.md  Cargo.toml  README.md
crates/server/src/: error.rs  lib.rs  server.rs  tracing_config.rs
crates/server/tests/load/: README.md  spike-test.js  stress-test.js
crates/server/tests/security/: README.md  xss-test.js
crates/storage/: Cargo.toml
crates/storage/migrations/: 20251130000002_users.sql  20251130000004_schedules.sql  20251130000005_secrets.sql  20251130000006_webhooks.sql  20251130000007_execution_checkpoints.sql  20251201000001_api_keys.sql  20251201000002_audit_logs.sql  20251201000003_metrics.sql  20251201000004_quotas.sql
crates/storage/sql/: 001_performance_indexes.sql
crates/storage/src/: db_utils.rs  execution_store.rs  migration_runner.rs  migrations.rs  models.rs  pagination.rs  pool.rs  query_builder.rs  retry.rs  validation.rs  workflow_store.rs
flows/: conditional-branch.json  error-handling.json  parallel-execution.json  service-call.json  simple-linear.json  switch-routing.json  with-retry.json
