[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite-based storage layer for OxiFY execution history, metrics, and caching"
repository = "https://github.com/cool-japan/oxify"
categories = ["database", "caching", "asynchronous"]
keywords = ["sqlite", "database", "storage", "metrics", "cache"]

[dependencies]
model = { version = "0.1.0", path = "../model" }
sqlx = { workspace = true, features = ["migrate", "json", "uuid", "chrono", "rust_decimal"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
regex = "1.12"
sha2 = "0.10"

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
